# nvyz

./: .aider.conf.yaml  .gitignore  CHANGELOG.md  NEXT-STEPS.md  README.md  build_grammar.py  nvyz.md  pyproject.toml
doc/: development_status_and_testing.md  implementation_plan.md  phase1_commands.md  phase3_commands.md  test_phase2_instructions.md  test_phase3_4_instructions.md  tree_sitter_troubleshooting.md
specs/: CDC.txt
src/: check_md.py  check_md.py.old  fix_md.py
src/app/: cli.py  config.py
src/app/core/: pathglob.py  plugin.py  treesitter.py
src/app/encoding/: check_md.py  fix_md.py  fix_utf8.py
src/app/plugins/: codeql_plugin.py  sonarqube_plugin.py
src/app/reporting/: sarif_generator.py
src/app/security/: secret_scanner.py  taint_analyzer.py
tests/: test_cli.py
tests/core/: test_plugin.py  test_treesitter.py
tests/plugins/: test_codeql_plugin.py
tests/reporting/: test_sarif_generator.py
tests/security/: test_secret_scanner.py  test_taint_analyzer.py
