[tool.poetry]
name = "nvyz"
version = "0.1.1a0"
description = "Un outil pour vérifier l'encodage des fichiers Markdown."
authors = ["Votre Nom <votre.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "app", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.10"
chardet = "^5.2.0"
rich = "^13.7.0"
python-dotenv = "^1.0.0"
tree-sitter = "^0.25.2"
sarif-om = "^1.0.0"
requests = { version = "^2.31", optional = true }
xmltodict = { version = "^0.13", optional = true }
pydantic = {version = "^2.0", extras = ["yaml"]}

[tool.poetry.group.dev.dependencies]
commitizen = "^3.13.0"
pytest = "^8.0.0"
black = "^24.0.0"
isort = "^5.13.0"
bandit = "^1.7.0"
detect-secrets = "^1.4.0"

[tool.poetry.scripts]
nvyz = "app.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.1a0"
tag_format = "$version"
version_files = [
    "pyproject.toml:version",
    "src/app/__init__.py:__version__"
]

[tool.poetry.extras]
codeql = []
sonarqube = ["requests", "xmltodict"]